Fixing max height, overflow
Fix max height and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ tbody {
     display: block;
     width: inherit;
     overflow-y: scroll;
+    max-height: 140px;
 }
 
 
